deploy/kubernetes/overlays/production/patch-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradelab-frontend
spec:
  replicas: 2
